--- a/src/main/resources/com/ventas/sistemaventas_jfx/view/Productos_view.fxml
+++ b/src/main/resources/com/ventas/sistemaventas_jfx/view/Productos_view.fxml
@@ -1,18 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXComboBox?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
             prefHeight="685.0" prefWidth="1017.0" xmlns="http://javafx.com/javafx/8.0.171"
             xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label layoutX="387.0" layoutY="290.0" text="Productos">
-            <font>
-                <Font size="43.0"/>
-            </font>
-        </Label>
+        <Pane prefHeight="70.0" prefWidth="1017.0" AnchorPane.bottomAnchor="615.0" AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+
+            <HBox alignment="CENTER" layoutX="14.0" layoutY="4.0" prefHeight="70.0" prefWidth="1001.0"
+                  spacing="10.0">
+
+                <MFXTextField fx:id="txt_Codigo" floatMode="BORDER" floatingText="Código" minWidth="70.0"
+                              prefColumnCount="5" prefHeight="40.0" prefWidth="79.0"/>
+                <MFXTextField fx:id="txt_Id" floatMode="BORDER" floatingText="Id" minWidth="56.0"
+                              prefColumnCount="5" prefHeight="40.0" prefWidth="56.0"/>
+                <MFXTextField fx:id="txt_Descripcion" floatMode="BORDER" floatingText="Descripción"
+                              minWidth="70.0" prefColumnCount="5" prefHeight="40.0" prefWidth="157.0"/>
+                <MFXTextField fx:id="txt_Stock" floatMode="BORDER" floatingText="Stock" minWidth="70.0"
+                              prefColumnCount="5" prefHeight="40.0" prefWidth="77.0"/>
+                <MFXComboBox fx:id="cBx_Proveedores" floatingText="Proveedores" prefHeight="40.0"
+                             prefWidth="137.0"/>
+                <MFXTextField fx:id="txt_Precio" floatMode="BORDER" floatingText="Precio" minWidth="70.0"
+                              prefColumnCount="5" prefHeight="40.0" prefWidth="93.0"/>
+                <MFXButton fx:id="btn_Guardar" prefHeight="40.0" prefWidth="77.0"
+                           style="-fx-background-color: #0288d1; -fx-background-size: 15px; -fx-text-fill: #ffffff"
+                           text="Guardar"/>
+                <MFXButton fx:id="btn_Actualizar" prefHeight="40.0" prefWidth="77.0"
+                           style="-fx-background-color: #0288d1; -fx-background-size: 15px; -fx-text-fill: #ffffff"
+                           text="Actualizar"/>
+                <MFXButton fx:id="btn_Eliminar" prefHeight="40.0" prefWidth="77.0"
+                           style="-fx-background-color: #0288d1; -fx-background-size: 15px; -fx-text-fill: #ffffff"
+                           text="Eliminar"/>
+                <MFXButton fx:id="btn_Reporte" prefHeight="40.0" prefWidth="77.0"
+                           style="-fx-background-color: #0288d1; -fx-background-size: 15px; -fx-text-fill: #ffffff"
+                           text="Reporte"/>
+
+            </HBox>
+        </Pane>
+        <Pane layoutX="14.0" layoutY="69.0" prefHeight="189.0" prefWidth="676.0" AnchorPane.bottomAnchor="0.0"
+              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="69.0">
+            <children>
+                <TableView fx:id="tbl_TablaProductos" prefHeight="616.0" prefWidth="1017.0">
+                    <columns>
+                        <TableColumn fx:id="tc_Id" prefWidth="95.99996948242188" text="ID"/>
+                        <TableColumn fx:id="tc_Codigo" prefWidth="109.0" text="Código"/>
+                        <TableColumn fx:id="tc_Descripcion" prefWidth="258.0" text="Descripción"/>
+                        <TableColumn fx:id="tc_Proveedor" prefWidth="233.0" text="Proveedor"/>
+                        <TableColumn fx:id="tc_Stock" prefWidth="159.0" text="Stock"/>
+                        <TableColumn fx:id="tc_Precio" prefWidth="161.0" text="Precio"/>
+                    </columns>
+                </TableView>
+            </children>
+
+        </Pane>
     </children>
 </AnchorPane>
