--- a/src/main/resources/com/ventas/sistemaventas_jfx/view/Ventas_view.fxml
+++ b/src/main/resources/com/ventas/sistemaventas_jfx/view/Ventas_view.fxml
@@ -1,16 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="685.0" prefWidth="1017.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Label layoutX="387.0" layoutY="290.0" text="Ventas">
-         <font>
-            <Font size="43.0" />
-         </font>
-      </Label>
-   </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="685.0" prefWidth="1017.0" xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <Pane prefHeight="70.0" prefWidth="1017.0" AnchorPane.bottomAnchor="615.0" AnchorPane.leftAnchor="0.0"
+              AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <HBox alignment="CENTER_LEFT" layoutX="14.0" layoutY="4.0" prefHeight="70.0"
+                      prefWidth="1001.0" spacing="10.0">
+                    <children>
+                        <MFXButton fx:id="btn_Pdf" prefHeight="40.0" prefWidth="77.0"
+                                   style="-fx-background-color: #0288d1; -fx-background-size: 15px; -fx-text-fill: #ffffff"
+                                   text="PDF"/>
+                        <MFXTextField fx:id="txt_Pdf" floatMode="BORDER" floatingText="PDF" minWidth="70.0"
+                                      prefColumnCount="5" prefHeight="40.0" prefWidth="166.0"/>
+                    </children>
+                </HBox>
+            </children>
+        </Pane>
+        <Pane layoutX="14.0" layoutY="69.0" prefHeight="189.0" prefWidth="676.0" AnchorPane.bottomAnchor="0.0"
+              AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="69.0">
+            <children>
+                <TableView fx:id="tbl_TablaVentas" layoutX="-2.0" layoutY="2.0" prefHeight="616.0"
+                           prefWidth="1017.0">
+                    <columns>
+                        <TableColumn fx:id="tc_Id" prefWidth="126.99996948242188" text="ID"/>
+                        <TableColumn fx:id="tc_Clientes" prefWidth="265.0" text="Clientes"/>
+                        <TableColumn fx:id="tc_Vendedores" prefWidth="377.0" text="Vendedores"/>
+                        <TableColumn fx:id="tc_Total" prefWidth="247.0" text="Total"/>
+                    </columns>
+                </TableView>
+            </children>
+        </Pane>
+    </children>
 </AnchorPane>
