--- a/src/main/resources/com/ventas/sistemaventas_jfx/view/Clientes_view.fxml
+++ b/src/main/resources/com/ventas/sistemaventas_jfx/view/Clientes_view.fxml
@@ -7,7 +7,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
             prefHeight="685.0" prefWidth="1017.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.ventas.sistemaventas_jfx.controller.Client_Controller">
+            fx:controller="com.ventas.sistemaventas_jfx.controller.Cliente_Controller">
     <Pane prefHeight="70.0" prefWidth="1017.0" AnchorPane.bottomAnchor="615.0" AnchorPane.leftAnchor="0.0"
           AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <HBox alignment="CENTER" layoutX="-2.0" layoutY="4.0" prefHeight="70.0" prefWidth="1017.0"
